<resources>

    <string name="app_name">cloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="baojie">保洁</string>
    <string name="me">我</string>
    <string name="order">订单</string>
    <string name="firstpage">首页</string>
    <string name="yuesao">月嫂</string>
    <string name="oldman">看护老人</string>
    <string name="yuer">育儿嫂</string>
    <string name="baomu">保姆</string>
    <string name="zhongdiangong">钟点工</string>
    <string name="detail">>>>详情</string>
    <string name="topword">云家政</string>
    <string name="topword1">我的订单</string>
    <string name="topwordme">我的信息</string>
    <string name="exist">退出</string>
    <string name="servers">客服</string>
    <string name="mianji">房屋面积</string>
    <string name="mianjidaxiao">请选择面积</string>
    <string name="demo_name_basemap">基本地图功能</string>
    <string name="demo_title_basemap">基本地图功能--BaseMapDemo</string>
    <string name="demo_desc_basemap">创建一张百度地图并管理地图的生命周期</string>
    <string name="demo_name_map_fragment">基于MapFragment的基本地图</string>
    <string name="demo_title_map_fragment">MapFragment使用--MapFragmentDemo</string>
    <string name="demo_desc_map_fragment">创建一个基于Fragment的地图框架</string>
    <string name="demo_name_multimap">多地图展示</string>
    <string name="demo_title_multimap">多地图展示--MultiMapViewDemo</string>
    <string name="demo_desc_multimap">在一个Activity中创建多个地图展示</string>
    <string name="demo_name_layers">图层展示</string>
    <string name="demo_title_layers">图层展示--LayersDemo</string>
    <string name="demo_desc_layers">展示普通图、卫星图、交通流量图及百度城市热力图</string>
    <string name="demo_name_control">地图操作功能</string>
    <string name="demo_desc_control">介绍地图基本控制方法</string>
    <string name="demo_title_control">地图操作功能--MapControlDemo</string>
    <string name="demo_name_ui">UI控制功能</string>
    <string name="demo_title_ui">UI控制功能--UISettingsDemo</string>
    <string name="demo_desc_ui">介绍开关手势功能和显示隐藏UI控件</string>
    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_location">定位图层展示--LocationDemo</string>
    <string name="demo_desc_location">介绍定位图层的基本用法</string>
    <string name="demo_name_geometry">自定义绘制功能</string>
    <string name="demo_title_geometry">自定义绘制功能--GeometryDemo</string>
    <string name="demo_desc_geometry">介绍自定义绘制点、线、多边形、圆等几何图形和文字</string>
    <string name="demo_name_favorite">点收藏功能</string>
    <string name="demo_title_favorite">点收藏功能--FavoriteDemo</string>
    <string name="demo_desc_favorite">介绍如何创建、管理本地点数据</string>
    <string name="demo_name_radar">周边雷达功能</string>
    <string name="demo_title_radar">周边雷达功能--RadarDemo</string>
    <string name="demo_desc_radar">介绍如何使用周边雷达功能上传位置、检索周边的人</string>
    <string name="demo_name_overlay">覆盖物功能</string>
    <string name="demo_title_overlay">覆盖物功能--OverlayDemo</string>
    <string name="demo_desc_overlay">介绍添加覆盖物并响应点击功能和弹出pop功能</string>
    <string name="demo_name_poi">POI搜索功能</string>
    <string name="demo_title_poi">POI搜索功能--POISearchDemo</string>
    <string name="demo_desc_poi">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="demo_name_route">路径规划功能</string>
    <string name="demo_title_route">路径规划功能--RoutePlanDemo</string>
    <string name="demo_desc_route">介绍公交、驾车和步行三种线路规划方法和自设路线方法</string>
    <string name="demo_name_geocode">地理编码功能</string>
    <string name="demo_title_geocode">地理编码功能--GeoCodeDemo</string>
    <string name="demo_desc_geocode">介绍地址信息与坐标之间的相互转换</string>
    <string name="demo_name_bus">公交线路查询功能</string>
    <string name="demo_title_bus">公交线路查询功能--BusLineDemo</string>
    <string name="demo_desc_bus">介绍查询公交线路功能</string>
    <string name="demo_name_offline">离线地图功能</string>
    <string name="demo_title_offline">离线地图功能--OfflineDemo</string>
    <string name="demo_desc_offline">介绍如何下载和使用离线地图</string>
    <string name="demo_name_open_baidumap">调启百度地图</string>
    <string name="demo_title_open_baidumap">调启百度地图--OpenBaiduMap</string>
    <string name="demo_desc_open_baidumap">介绍如何调启百度地图实现自身业务功能</string>
    <string name="demo_name_cloud">LBS.云检索功能</string>
    <string name="demo_title_cloud">LBS.云检索功能--CloudSearchDemo</string>
    <string name="demo_desc_cloud">介绍如何使用LBS.云检索用户自有数据</string>
    <string name="demo_name_heatmap">热力图功能</string>
    <string name="demo_title_heatmap">热力图功能--HeatMapDemo</string>
    <string name="demo_desc_heatmap">介绍如何以热力图形式显示用户自有数据</string>
    <string name="demo_name_opengl">OpenGL绘制功能</string>
    <string name="demo_title_opengl">OpenGL绘制功能--OpenGLDemo</string>
    <string name="demo_desc_opengl">介绍如何使用OpenGL绘制在地图中进行绘制</string>
    <string name="key_error">"请在  DemoApplication.java文件输入正确的授权Key！\r\n申请地址：http://dev.baidu.com/wiki/static/imap/key/"</string>
    <string name="navi_tip">百度地图SDK支持通过相关的接口，调启百度地图客户端（v5.0以上）导航和Web端百度地图导航。</string>
    <string name="title_activity_cloud_search_demo">云检索使用介绍</string>
    <string name="cloud_search_tips"> \t\tLBS.云是百度地图针对LBS开发者推出的平台级服务。结合已有的地图API和SDK服务。通过开放服务端存储和计算能力,提供海量位置数据存储、检索、展示一体化解决方案。\n\n
          \t\t该服务对开发者免费开放。测试demo里写入了测试的ak。开发者可以使用测试ak查看 LBS.云检索的效果。如果开发者要使用自己的数据，请在申请ak后替换demo中的ak。\n\n
          \t\t如有任何关于LBS.云服务的问题,诸如如何申请ak、如何存储和检索数据等，请访问百度地图官方“LBS开放平台”。地址：http://lbsyun.baidu.com/  \n</string>
    <string name="panorama_tips">\t\t百度地图SDK为您免费提供全景图的功能。\n
      \t\t利用接口，可查询、开启并操作更丰富的全景图。\n
      \t\t以下三个示例分别向您展示了三种调启全景图的入口，您可在实际操作中灵活运用。\n
      \t\t全景图还提供了Item绘制能力，您可在第三个示例中查看具体使用方法。</string>
    <string name="panorama_poi_tips"> 首先根据关键词进行POI检索，点击地图上的POI点，根据POI的UID进入全景</string>
    <string name="panorama_geo_tips">单击地图以选取坐标点</string>
    <string name="demo_title_share">短串分享功能 --ShareDemo</string>
    <string name="demo_name_share">短串分享</string>
    <string name="demo_desc_share">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="share_tip">\t\t短串分享是指，用户搜索查询后得到的每一个地理位置结果将会对应一条短串（短链接），用户可以通过短信、邮件或第三方分享组件（如微博、微信等）把短串分享给其他用户从而实现地理位置信息的分享。当其他用户收到分享的短串后，点击短串即可打开手机上的百度地图客户端或者手机浏览器进行查看。\n\n
                \t\t例如，用户搜索“百度大厦”后通过短信使用短串分享功能把该地点分享给好友，好友点击短信中的短串“http://j.map.baidu.com/XLCrk”后可以调起百度地图客户端或者手机浏览器查看“百度大厦”的地理位置信息。\n\n
                \t\t目前短串分享功能暂时开放了“POI搜索结果分享”和“反向地理编码结果分享”，日后会开放更多的功能，欢迎广大开发者使用短</string>
    <string name="title_activity_panorama_activity_main">全景图功能</string>
    <string name="title_activity_panorama_poi_selector">通过POI进入全景图</string>
    <string name="title_activity_panorama_geo_selector">通过地理坐标进入全景图</string>
    <string name="title_activity_panorama_demo">全景图功能</string>

    <string-array name="stringArray">
        <item>上海</item>
        <item>西安</item>
        <item>北京</item>
        <item>深圳</item>
        <item>青岛</item>
    </string-array>

    <string name="zuofan">做饭</string>
    <string name="pinglv">服务频率</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="datestart">开始时间</string>
    <string name="dateend">结束时间</string>
    <string name="jiaweijiage">请选择价格</string>
    <string name="jiawei">心理价位</string>
    <string name="petis">是否有宠物</string>
    <string name="cat">猫</string>
    <string name="smalldog">小型犬</string>
    <string name="bigdog">大型犬</string>
    <string name="other">其他需求</string>
    <string name="address">输入服务地址</string>
    <string name="lianxiren">请输入联系人</string>
    <string name="phonenumber">请输入手机号</string>
    <string name="otherdetail">输入其他需求（选填）</string>
    <string name="serversdetail">服务内容</string>
    <string name="textdatestart">点击输入开始日期</string>
    <string name="textdateend">点击输入结束日期</string>
    <string name="wenxintishi">温馨提示：阿姨面试成功后会有云家政服务门店按市场价收取中介费</string>
    <string name="ok">发起预约</string>
    <string name="back">&lt;</string>
    <string name="kouwei">烧饭口味</string>
    <string name="dan">偏淡</string>
    <string name="xian">偏咸</string>
    <string name="la">偏辣</string>
    <string name="qingdan">清淡</string>
    <string name="mianshi">面食</string>
    <string name="action_settings">TODO</string>
    <string name="cancel">取消</string>
    <string name="affirm">确认</string>
    <string name="otherneed">其他需求</string>
    <string name="otherneedtishi">请简单描述您遇到的问题</string>
    <string name="BACK">X</string>
    <string name="FUWUNEIRONG">固定时间上门提供家政服务，主要包括：打扫卫生，熨烫衣服，买菜做饭，辅助照顾小孩老人等</string>
    <string name="fuwuneirongxiao">服务内容</string>
    <string name="zhujiabaomu">住家保姆</string>
    <string name="boy">男宝宝</string>
    <string name="girl">女宝宝</string>
    <string name="boyage">宝宝年龄</string>
    <string name="choiceage">请选择年龄</string>
    <string name="zhujia">住家</string>
    <string name="buzhujia">不住家</string>
    <string name="yuersao">育儿嫂</string>
    <string name="selfno">不能自理</string>
    <string name="halfself">半自理</string>
    <string name="self">自理</string>
    <string name="man">男老人</string>
    <string name="woman">女老人</string>
    <string name="deliverdate">预产期</string>
    <string name="chilcedeliverdate">请选择预产期</string>
    <string name="singleprice">单价</string>
    <string name="pricenumbei">25元/小时</string>
    <string name="queding">确定</string>
    <string name="gotime">上门时间</string>
    <string name="gotimechioce">请选择上门时间</string>
    <string name="price">50元</string>
    <string name="zojia">总价</string>
    <string name="choicetime">选择服务时长</string>
    <string name="twohour">两小时</string>
    <string name="threehour">三小时</string>
    <string name="fourhour">四小时</string>
    <string name="yuersaofuwu">育儿嫂的服务</string>
    <string name="x">X</string>
    <string name="content">服务内容</string>
    <string name="yuesaodefuwu">月嫂的服务</string>
    <string name="zhongdiangongfuwu">固定时间上门提供家政服务，主要包括：打扫卫生，熨烫衣服，买菜做饭，辅助照顾小孩老人等</string>
    <string name="laorenfuwu">老人的服务</string>
    <string name="baomufuwu">保姆的服务</string>
    <string name="baojiefuwu">保洁的服务</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="select">选中</string>
    <string name="addnewaddress">点击添加新地址</string>
    <string name="selectaddress">请选择地址</string>
    <string name="xiugai">修改</string>
    <string name="new111">刷新</string>
    <string name="orderdetail">订单详情</string>
    <string name="backto">返回</string>

</resources>