<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaea"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#eaeaea"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yuer_cancel"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="#eaeaea"
            android:text="@string/cancel"
            android:textColor="#00ff00" />

        <Button
            android:id="@+id/btn_yuer_no"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="4"
            android:background="#eaeaea"
            android:text="@string/otherneed" />

        <Button
            android:id="@+id/btn_yuer_affirm"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="#eaeaea"
            android:text="@string/affirm"
            android:textColor="#00ff00" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eaeaea"
        android:orientation="horizontal" >
        <EditText
        android:id="@+id/text_yuer_otherneed"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        android:gravity="left"
        android:hint="@string/otherneedtishi"
        android:textColor="#030303"
        android:textSize="8pt" />
    </LinearLayout>

    

</LinearLayout>